# alpha_waves_loader

./: ALPHA_E.asm  ALPHA_E.idb  README.md  ae.asm  ae.com  ae_org_u.com  build.bat  build_exeload.bat  build_loader.bat  exeload.asm  loader.asm  loader_c.c  loader_data.asm  test_variants.bat  tools_howto.txt
backup/: loader_data.asm
exe_loader/: exeload.asm
loader/: asm_part.asm  build.bat  c_part.c  main.asm
read_some_file_sub_4/: CMakeLists.txt  cc1_reader.cpp  cleanup_port.cpp  emu.cpp  emu.hpp  example.cpp  helper.cpp  helper.hpp  main.cpp  old.protection_tests.cpp  original_port.cpp  port.cpp  protection_tests.cpp  read_some_file_sub_4.sln  read_some_file_sub_4.vcxproj.filters  types.hpp
read_some_file_sub_4/read_some_file_sub_4/: emu.cpp  helper.cpp  helper.hpp  main.cpp  port.cpp  read_some_file_sub_4.vcxproj  read_some_file_sub_4.vcxproj.filters  types.hpp
tools/: CMakelists.txt  build_starter.bat  extractor.cpp  starter.cpp  uncompress_cc1.cpp
tools/create_static_exes/: CMakeLists.txt  create_static_exes.cpp
tools/extractor/: CMakelists.txt
tools/uncompress_cc/: CMakeLists.txt  CMakelists.txt  Readme.md  cc_algorithm.cpp  cc_algorithm.hpp  cc_file.cpp  cc_file.hpp  helper.cpp  helper.hpp  known_files.txt  uncompress_cc.cpp
tools/uncompress_cc1/: CMakelists.txt  known_files.txt  uncompress_cc1.cpp
